# django-starter-2025

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yaml  hello.py  mise.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  ci.yml
config/: asgi.py  routing.py  settings.py  urls.py
devops/: generate-certs.sh  nginx.conf  wait-for-it.sh
devops/certs/: Dockerfile  generate.sh
devops/k8s/: deploy-to-minikube.sh
devops/k8s/templates/: channel-layer-deployment.yaml  channel-layer-service.yaml  db-deployment.yaml  db-service.yaml  db-volume.yaml  db.yaml  ingress.yaml  msg-deployment.yaml  msg-service.yaml  proxy.yaml  s3-deployment.yaml  s3-proxy.yaml  s3-service.yaml  s3-volumes.yaml  web-config-map.yaml  web-deployment.yaml  web-jobs.yaml  web-service.yaml  web.yaml
devops/s3/: Dockerfile  entrypoint.sh  garage-config-template.toml  garage-dev-config.toml
examples/: consumers.py  routing.py  urls.py  views.py
examples/templates/examples/chat/: index.html  room.html
examples/templates/examples/tasks/: index.html
users/: tests.py
users/migrations/: 0001_add_custom_user.py  0001_initial.py
