[project]
name = "django-starter-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2b1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]
pg = [
    "psycopg[binary]>=3.2.6",
]
web = [
    "granian>=2.0.1",
]
